--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
 
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
     <!-- Custom styles for this template -->
     <style>
         body { background-image: url('{% static "img/main-wallpaper.jpg" %}'); }
@@ -48,16 +51,16 @@
 <div class="app">
 
     <div class="header">
-        <img class="logo-img" src="{% static 'ico/logo.png' %}" alt="logo" onclick="window.location.href='{% url "main_page" %}'"/>
+        <img class="logo-img" src="{% static 'ico/logo.png' %}" alt="logo" onclick="window.location.href='{% url "main-page" %}'"/>
         <div class="header-menu">
                 <a class="menu-link" href="">Genres</a>
                 <a class="menu-link" href="">Specials</a>
-            {% if user.is_authenticated %}
-                <a class="menu-link" href="{% url 'logout' %}">Log Out</a>
-            {% else %}
-                <a class="menu-link" href="{% url 'login' %}">Log In</a>
-                <a class="menu-link" href="{% url 'register' %}">Register</a>
-            {% endif %}
+{#            {% if user.is_authenticated %}#}
+{#                <a class="menu-link" href="{% url 'logout' %}">Log Out</a>#}
+{#            {% else %}#}
+{#                <a class="menu-link" href="{% url 'login' %}">Log In</a>#}
+{#                <a class="menu-link" href="{% url 'register' %}">Register</a>#}
+{#            {% endif %}#}
         </div>
 
          <div class="header-profile">
@@ -92,9 +95,13 @@
 
 <span class="content-section-footer-title">JackShen Engeneering, {% now "Y" %}</span>
 
-<!--Main core JS, JQuery -->
-<script src="{% static 'libs/jquery1-7-1.min.js' %}"></script>
 <script src="{% static 'libs/prefixfree.min.js' %}"></script>
+
+<!-- jQuery and Bootstrap core JS, plus Popper -->
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+
 {% block extra_js %}
     <script src="{% static 'js/main_script.js' %}"></script>
 {% endblock extra_js %}
