Redesign main page

--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -24,6 +24,7 @@
   --scrollbar-bg: rgb(255 253 253 / 27%);
   --img-border: rgba(16 18 27 / 40%);
   --footer-color: #f9fafb;
+  --select-color: #fc9803;
 }
 
 .light-mode {
@@ -37,6 +38,7 @@
   --scrollbar-bg: rgb(1 2 3 / 20%);
   --img-border: rgba(53 97 158 / 50%);
   --footer-color: #f7f7f7;
+  --select-color: #4a90e2;
 }
 
 html {
