--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,9 @@
     <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
+{#    <link rel="stylesheet" href="{% static 'libs/normalize.min.css' %}">#}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/main-style.css' %}">
 
     <!-- Custom styles for this template -->
     <style>
@@ -30,8 +32,6 @@
     </style>
 
     {% block extrahead %}
-        <link rel="stylesheet" href="{% static 'css/main-style.css' %}">
-        <link rel="stylesheet" href="{% static 'libs/normalize.min.css' %}">
     {% endblock extrahead %}
 </head>
 
@@ -101,9 +101,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+<script src="{% static 'js/main_script.js' %}"></script>
 
 {% block extra_js %}
-    <script src="{% static 'js/main_script.js' %}"></script>
 {% endblock extra_js %}
 </body>
 </html>
