--- a/templates/main-page.html
+++ b/templates/main-page.html
@@ -1,79 +1,87 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block extrahead %}
+    <link rel="stylesheet" href="{% static 'libs/icons.css' %}">
+    <link rel="stylesheet" href="{% static 'css/adv-search.css' %}">
+{% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-sm wow animate__bounceIn">
-            <form class="text-center border border-light p-3 bg-dark" action="{% url 'advanced-search' %}" method="GET" autocomplete="off">
-                <p class="h4 text-center text-uppercase robotoBold text-warning">Advanced Search</p>
-                <hr>
-                <div class="row p-0 m-0">
-                    <div class="col">
-                        <div class="md-form ml-2">
-                            <input type="number" id="numberExample" class="form-control text-white robotoBold"
-                                name="getimdb" step="0.1" value="7" min="1" max="10">
-                            <label for="numberExample" class="text-warning roboto small">IMDB Rating</label>
-                        </div>
+<form class="adv-search" action="{% url 'advanced-search' %}" method="GET" autocomplete="off">
+    <div class="container">
+        <header class="adv-search-header">
+            <h2 class="title">ADVANCED SEARCH</h2>
+        </header>
+
+        <div class="adv-search-form">
+            <section class="form-content">
+                <div class="row-wrapper">
+                    <div class="element imdb-rate ">
+                        <label for="imdb-rate">IMDB Rating (Greater than)</label>
+                        <input type="number" name="getRate" step="0.1" value="7" min="1" max="10" placeholder="IMDB Rating" id="imdb-rate">
                     </div>
 
-                    <div class="col">
-                        <div class="md-form mr-2">
-                            <input type="number" id="yearid" class="form-control text-white robotoBold" name="getyear" min="1970" max="2021" value="2000">
-                            <label for="yearid" class="text-warning roboto small">Year After</label>
-                        </div>
+                    <div class="element year">
+                        <label for="year">Year (After)</label>
+                        <input type="number" name="getYear" min="1970" max="2021" value="2000"  placeholder="Year" id="year">
                     </div>
                 </div>
 
-                <div class="row p-0 m-0">
-                    <div class="col">
-                        <div class="md-form ml-2">
-                            <input type="text" id="formStars" class="form-control text-white robotoBold" name="getStar">
-                            <label for="formStars" class="text-warning roboto small">Cast Member</label>
-                        </div>
-
+                <div class="row-wrapper">
+                    <div class="element cast">
+                        <label for="cast">Cast Member or Members</label>
+                        <input type="text" name="getCast" placeholder="Cast Member" id="cast">
                     </div>
 
-                    <div class="col">
-                        <div class="md-form mr-2">
-                            <input type="text" id="textKey" class="form-control text-white robotoBold"
-                                name="getKeywords">
-                            <label for="textKey" class="text-warning roboto small">Keywords</label>
-                        </div>
+                    <div class="element keywords">
+                        <label for="keywords">Keywords</label>
+                        <input type="text" name="getKeywords" value="" placeholder="Keywords" id="keywords">
                     </div>
                 </div>
 
+                <div class="row-wrapper">
+                    <div class="element genres">
+                        <label for="title">Select the Genre</label>
+                        <select name="getGenre" id="title">
+                            <option value="All" selected>All</option>
+                            <option value="Action">Action</option>
+                            <option value="Drama">Drama</option>
+                            <option value="Comedy">Comedy</option>
+                            <option value="Adventure">Adventure</option>
+                            <option value="Horror">Horror</option>
+                            <option value="Thriller">Thriller</option>
+                            <option value="Sci-Fi">Sci-Fi</option>
+                            <option value="Mystery">Mystery</option>
+                            <option value="Family">Family</option>
+                            <option value="Fantasy">Fantasy</option>
+                            <option value="Crime">Crime</option>
+                        </select>
+                    </div>
 
-                <div class="row p-0 m-0 mb-3">
-                    <select class="browser-default custom-select mb-4 bg-dark
-                        text-white robotoBold w-50 mr-3 mt-3 ml-3 decorated" name="getgenre">
-                        <option value="" class="text-warning" disabled>Select the Genre</option>
-                        <option value="All" selected>All</option>
-                        <option value="Action">Action</option>
-                        <option value="Drama">Drama</option>
-                        <option value="Comedy">Comedy</option>
-                        <option value="Adventure">Adventure</option>
-                        <option value="Horror">Horror</option>
-                        <option value="Thriller">Thriller</option>
-                        <option value="Sci-Fi">Sci-Fi</option>
-                        <option value="Mystery">Mystery</option>
-                        <option value="Family">Family</option>
-                        <option value="Fantasy">Fantasy</option>
-                        <option value="Crime">Crime</option>
-                    </select>
-                    <div class="radio-toolbar m-0 p-0 mt-3">
-                        <input type="radio" id="byimbd" name="inlineDefaultRadios" value="byimdb" class="mr-2" checked>
-                        <label for="byimbd" class="robotoBold">By IMDb</label>
+                    <div class="row-wrapper more-options">
+                        <label for="by-rating" class="radio">
+                            <input type="radio" value="byIMDb" name="sorting" id="by-rating" class="hidden" checked/>
+                            <span class="label"></span>By IMDb
+                        </label>
 
-                        <input type="radio" id="byyear" name="inlineDefaultRadios" value="byyear">
-                        <label for="byyear" class="robotoBold">By Year</label>
+                        <label for="by-year" class="radio">
+                            <input type="radio" value="byYear" name="sorting" id="by-year" class="hidden"/>
+                            <span class="label"></span>By Year
+                        </label>
                     </div>
                 </div>
-
-                <button class="btn btn-dark btn-block text-warning border border-warning" type="submit" id="myBtn"
-                    style="font-family: 'Oswald', sans-serif;">Submit</button>
-
-            </form>
+            </section>
         </div>
+
+        <footer class="form-footer">
+            <div class="footer-wrapper">
+                <input type="submit" value="Search Movies!" class="">
+            </div>
+        </footer>
     </div>
-</div>
+</form>
 {% endblock %}
+
+{% block extra_js %}
+<script src="{% static 'js/adv-search.js' %}"></script>
+{% endblock extra_js %}
