Update design for adv search result

--- a/templates/advanced_search.html
+++ b/templates/advanced_search.html
@@ -65,20 +65,20 @@
             </button>
         </div>
 
-        <div class="movie-cell category">
+        <div class="movie-cell genre">
             Genre
         </div>
 
-        <div class="movie-cell status-cell">
+        <div class="movie-cell netflix">
             Netflix Status
         </div>
 
-        <div class="movie-cell sales">
+        <div class="movie-cell imdb-num">
             IMDb #
         </div>
 
 
-        <div class="movie-cell stock">
+        <div class="movie-cell rating">
             Rating
             <button class="sort-button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512">
@@ -87,7 +87,7 @@
             </button>
         </div>
 
-        <div class="movie-cell price">
+        <div class="movie-cell watchlist">
             Add to Watchlist
         </div>
     </div>
