--- a/static/css/movies-list.css
+++ b/static/css/movies-list.css
@@ -287,25 +287,25 @@
 }
 
 @media screen and (max-width: 520px) {
-    .tableView .movie-cell.category, .tableView .movie-cell.sales {
+    .tableView .movie-cell.genre, .tableView .movie-cell.imdb-num {
         display: none;
     }
 
-    .tableView .movie-cell.status-cell {
+    .tableView .movie-cell.netflix {
         flex: 0.4;
     }
 
-    .tableView .movie-cell.stock, .tableView .movie-cell.price {
+    .tableView .movie-cell.rating, .tableView .movie-cell.watchlist {
         flex: 0.2;
     }
 }
 
 @media screen and (max-width: 480px) {
-    .tableView .movie-cell.stock {
+    .tableView .movie-cell.rating {
         display: none;
     }
 
-    .tableView .movie-cell.price {
+    .tableView .movie-cell.watchlist {
         flex: 0.4;
     }
 }
@@ -385,7 +385,7 @@
 
 .gridView .movies-row {
     margin: 8px;
-    width: calc(25% - 16px);
+    width: calc(20% - 16px);
     background-color: var(--app-content-secondary-color);
     padding: 8px;
     border-radius: 4px;
@@ -442,7 +442,7 @@
 
 .gridView .movie-cell img {
     width: 100%;
-    height: 140px;
+    height: 300px;
     -o-object-fit: cover;
      object-fit: cover;
     border-radius: 4px;
