--- a/static/css/movies-list.css
+++ b/static/css/movies-list.css
@@ -103,7 +103,7 @@
     border-radius: 4px;
     height: 32px;
     background-color: var(--app-content-secondary-color);
-    border: 1px solid var(--app-content-secondary-color);
+    border: 1px solid var(--border-color);
     display: flex;
     align-items: center;
     color: var(--theme-color);
@@ -265,7 +265,7 @@
     align-items: center;
 }
 
-.tableView .movie-cell img {
+.tableView .movie-cell input {
     width: 22px;
     height: 32px;
     border-radius: 6px;
@@ -440,7 +440,7 @@
     line-height: 24px;
 }
 
-.gridView .movie-cell img {
+.gridView .movie-cell input {
     width: 100%;
     height: 300px;
     -o-object-fit: cover;
