--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -32,7 +32,7 @@
   --theme-color: #3c3a3a;
   --border-color: rgb(255 255 255 / 35%);
   --inactive-color: #333333;
-  --content-title-color: --theme-color;
+  --content-title-color: #21242d;
   --main-bg: #f7f7f7;
   --search-bg: rgb(255 255 255 / 31%);
   --scrollbar-bg: rgb(1 2 3 / 20%);
