--- a/templates/advanced_search.html
+++ b/templates/advanced_search.html
@@ -10,6 +10,7 @@
     <h1 class="app-content-header-text">Movie List &#160;<i class="fa fa-film" aria-hidden="true"></i></h1>
 </div>
 
+{% if movieItems %}
 <div class="app-content-list">
     <input class="search-genre" placeholder="Search specific genre..." type="text">
     <div class="app-content-list-wrapper">
@@ -76,6 +77,11 @@
 
         <div class="movie-cell imdb-num">
             IMDb Votes
+             <button class="sort-button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M496.1 138.3L375.7 17.9c-7.9-7.9-20.6-7.9-28.5 0L226.9 138.3c-7.9 7.9-7.9 20.6 0 28.5 7.9 7.9 20.6 7.9 28.5 0l85.7-85.7v352.8c0 11.3 9.1 20.4 20.4 20.4 11.3 0 20.4-9.1 20.4-20.4V81.1l85.7 85.7c7.9 7.9 20.6 7.9 28.5 0 7.9-7.8 7.9-20.6 0-28.5zM287.1 347.2c-7.9-7.9-20.6-7.9-28.5 0l-85.7 85.7V80.1c0-11.3-9.1-20.4-20.4-20.4-11.3 0-20.4 9.1-20.4 20.4v352.8l-85.7-85.7c-7.9-7.9-20.6-7.9-28.5 0-7.9 7.9-7.9 20.6 0 28.5l120.4 120.4c7.9 7.9 20.6 7.9 28.5 0l120.4-120.4c7.8-7.9 7.8-20.7-.1-28.5z"></path>
+                </svg>
+            </button>
         </div>
 
         <div class="movie-cell rating" style="margin: 0;">
@@ -92,7 +98,7 @@
         </div>
     </div>
 
-    {% for movie in movieList|slice:"15" %}
+    {% for movie in movieItems %}
     <div class="movies-row">
         <form action="" method="POST" class="movie-cell poster" style="text-align: center;">
             {% csrf_token %}
@@ -127,6 +133,16 @@
     </div>
     {% endfor %}
 </div>
+{% if movieItems.has_next %}
+<a class="load-more" href="?page={{ movieItems.next_page_number }}">
+    <i class="fa fa-plus-circle more" aria-hidden="true"></i>
+</a>
+{% endif %}
+{% else %}
+<h4 style="position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+    Nothing was found for your query :(
+</h4>
+{% endif %}
 {% endblock %}
 
 {% block extra_js %}
