--- a/static/css/movie-info.css
+++ b/static/css/movie-info.css
@@ -67,7 +67,7 @@
 }
 
 .movie-card-right h1 {
-    color: white;
+    color: var(--theme-color);
     font-weight: 400;
     text-align: left;
     font-family: "Montserrat", sans-serif;
@@ -85,7 +85,7 @@
 
 .movie-card-right-details ul li {
     display: inline;
-    color: #e3e3e3;
+    color: var(--theme-color);
     font-weight: 400;
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
@@ -147,7 +147,7 @@
 
 
 .movie-card-right-review p {
-    color: white;
+    color: var(--theme-color);
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -202,6 +202,7 @@
 }
 
 .movie-card-right-button-disable a {
+    cursor: default;
     color: #9c9c9c;
     border: 2px solid #9c9c9c;
 }
