--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -25,6 +25,7 @@
   --img-border: rgba(16 18 27 / 40%);
   --footer-color: #f9fafb;
   --select-color: #fc9803;
+  --read-more: #ffda00;
 }
 
 .light-mode {
@@ -39,6 +40,7 @@
   --img-border: rgba(53 97 158 / 50%);
   --footer-color: #f7f7f7;
   --select-color: #4a90e2;
+  --read-more: #4a90e2;
 }
 
 html {
