--- a/static/css/movie-info.css
+++ b/static/css/movie-info.css
@@ -163,7 +163,7 @@
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
     padding: 0 0 0 40px;
-    color: #ffda00;
+    color: var(--read-more);
     margin: 0;
 }
 
