Add sorting by votes

--- a/templates/advanced_search.html
+++ b/templates/advanced_search.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}Movies List{% endblock %}
 
 {% block extrahead %}
     <link rel="stylesheet" href="{% static 'css/movies-list.css' %}">
