--- a/templates/result.html
+++ b/templates/result.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block extrahead %}
     <link rel="stylesheet" href="{% static 'css/movie-info.css' %}">
