--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                 <a class="menu-link" href="{% url 'logout' %}">Log Out</a>
             {% else %}
                 <a class="menu-link" href="{% url 'login' %}">Log In</a>
-{#                <a class="menu-link" href="{% url 'register' %}">Register</a>#}
+                <a class="menu-link" href="{% url 'register' %}">Register</a>
             {% endif %}
         </div>
 
