--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,11 +1,11 @@
 {% load static %}
-
+{% load crispy_forms_filters %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 
-<title>Login Form</title>
+<title>Registration Form</title>
 <link rel="icon" href="{% static 'ico/logo.ico' %}" type="image/x-icon">
 
 <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
@@ -27,61 +27,52 @@
             });
             }, 4000);
     </script>
-
+    {% for field, errors in form.errors.items %}
+        {% for error in errors %}
+            {% if error != "This field is required." %}
     <div class="alert alert-danger" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Your username and password didn't match.</strong> Please try again.
+        <strong>{{ error }}</strong>
     </div>
+                {% else %}
+    <div class="alert alert-danger" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Fill all fields and try again.</strong>
+    </div>
+            {% endif %}
+        {% endfor %}
+    {% endfor %}
 {% endif %}
 
-{% if next %}
-  {% if user.is_authenticated %}
-      <div class="alert alert-danger" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Your account doesn't have access to this page.</strong>
-          To proceed, please login with an account that has access.
-      </div>
-  {% else %}
-      <div class="alert alert-info" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Please login to see this site.</strong>
-      </div>
-  {% endif %}
-{% endif %}
 
 <div class="login-box">
-    <h2>Login</h2>
-    <form id="myform" method="post" action="{% url 'login' %}">
+    <h2>Sign Up</h2>
+    <form id="myform" method="post">
         {% csrf_token %}
         <div class="user-box">
             {{ form.username }}
             <label for="id_username">Username</label>
         </div>
         <div class="user-box">
-            {{ form.password }}
-            <label for="id_password">Password</label>
+            {{ form.email }}
+            <label for="id_email">Email</label>
+        </div>
+        <div class="user-box">
+            {{ form.password1 }}
+            <label for="id_password1">Password</label>
+        </div>
+        <div class="user-box">
+            {{ form.password2 }}
+            <label for="id_password1">Re-Enter Password</label>
         </div>
         <a onclick="document.getElementById('myform').submit()">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            <i class="fa fa-sign-in" aria-hidden="true"> </i> Login Locally
-            <input type="hidden" name="next" value="{{ next }}" />
+            <i class="fa fa-sign-in" aria-hidden="true"> </i> Sign Up
         </a>
-        {% if settings.SOCIAL_AUTH_GITHUB_KEY %}
-            <div class="github-box">
-                <a href="{% url 'social:begin' 'github' %}?next={{ next }}">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <i class="fa fa-github" aria-hidden="true"> </i> Login with GitHub
-                </a>
-            </div>
-        {% endif %}
-        <p><a href="{% url 'password_reset' %}" id="lost">Lost password?</a></p>
-        <!-- ROOT_URLCONF {{ settings.ROOT_URLCONF }} -->
+        <p><a href="{% url 'login' %}" id="lost">Already Have an Account?</a></p>
 </form>
 </div>
 
