--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cabin+Sketch' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
-{#    <link rel="stylesheet" href="{% static 'libs/normalize.min.css' %}">#}
+    <link rel="stylesheet" href="{% static 'libs/normalize.min.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/main-style.css' %}">
 
@@ -59,7 +59,7 @@
                 <a class="menu-link" href="{% url 'logout' %}">Log Out</a>
             {% else %}
                 <a class="menu-link" href="{% url 'login' %}">Log In</a>
-                <a class="menu-link" href="{% url 'register' %}">Register</a>
+                <a class="menu-link" href="{% url 'register' %}">Sign Up</a>
             {% endif %}
         </div>
 
