--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,82 +1,104 @@
 {% load static %}
-{% load crispy_forms_filters %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-
-<title>Registration Form</title>
-<link rel="icon" href="{% static 'ico/logo.ico' %}" type="image/x-icon">
-
-<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-<link rel="stylesheet"  href="{% static 'css/login.css' %}">
-
-{% block head %} {% endblock %}
+    <meta charset="UTF-8">
+    <title>Sign Up</title>
+    <link rel="icon" href="{% static 'ico/logo.ico' %}" type="image/x-icon">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
 </head>
 
 <body>
-{% block content %}
-
 {% if form.errors %}
-    <script>
-        window.setTimeout(function() {
-            $(".alert").fadeTo(500, 0).slideUp(500, function(){
-                $(this).remove();
-            });
-            }, 4000);
-    </script>
+<script>
+    window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove();
+        });
+        }, 4000);
+</script>
     {% for field, errors in form.errors.items %}
         {% for error in errors %}
             {% if error != "This field is required." %}
-    <div class="alert alert-danger" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>{{ error }}</strong>
-    </div>
-                {% else %}
-    <div class="alert alert-danger" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>Fill all fields and try again.</strong>
-    </div>
+<div class="alert alert-danger" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <strong>{{ error }}</strong>
+</div>
+            {% else %}
+<div class="alert alert-danger" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <strong>Fill all fields and try again.</strong>
+</div>
             {% endif %}
         {% endfor %}
     {% endfor %}
 {% endif %}
 
+<form class="sign-up" id="myform" method="post">
+    {% csrf_token %}
+    <div class="container">
+        <header class="sign-up-header">
+            <h2 class="title">Sign Up</h2>
+        </header>
 
-<div class="login-box">
-    <h2>Sign Up</h2>
-    <form id="myform" method="post">
-        {% csrf_token %}
-        <div class="user-box">
-            {{ form.username }}
-            <label for="id_username">Username</label>
+        <div class="sign-up-form">
+            <section class="form-content">
+                <div class="row-wrapper">
+                    <div class="element username">
+                        <label for="username">Username</label>
+                        {{ form.username }}
+                    </div>
+                </div>
+
+                <div class="row-wrapper">
+                    <div class="element email">
+                         <label for="email">Email</label>
+                         {{ form.email }}
+                    </div>
+                </div>
+
+                <div class="row-wrapper">
+                    <div class="element pass1">
+                        <label for="pass1">Password</label>
+                        {{ form.password1 }}
+                    </div>
+
+                    <div class="element pass2">
+                        <label for="pass2">Password confirmation</label>
+                        {{ form.password2 }}
+                    </div>
+                </div>
+            </section>
         </div>
-        <div class="user-box">
-            {{ form.email }}
-            <label for="id_email">Email</label>
-        </div>
-        <div class="user-box">
-            {{ form.password1 }}
-            <label for="id_password1">Password</label>
-        </div>
-        <div class="user-box">
-            {{ form.password2 }}
-            <label for="id_password1">Re-Enter Password</label>
-        </div>
-        <a onclick="document.getElementById('myform').submit()">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            <i class="fa fa-sign-in" aria-hidden="true"> </i> Sign Up
-        </a>
-        <p><a href="{% url 'login' %}" id="lost">Already Have an Account?</a></p>
+
+        <footer class="form-footer">
+            <div class="footer-wrapper">
+                <a onclick="document.getElementById('myform').submit()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <i class="fa fa-sign-in" aria-hidden="true"> </i> Sign Up
+                    <input type="hidden" name="next" value="{{ next }}" />
+                </a>
+            </div>
+            <div style="margin-top: 15px; text-align: center;">
+                <p style="color: white; cursor: default;">Already have an account?
+                    <a style="color: #1da2dc; text-decoration: none;"  href="{% url 'login' %}">Log In</a>
+                </p>
+            </div>
+        </footer>
+    </div>
 </form>
-</div>
 
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
-{% endblock %}
-
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+</body>
+</html>
