--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <style>
+        .sign-up {
+            width: 450px;
+        }
+
+        .sign-up .container .sign-up-form .form-content .row-wrapper .username,
+        .sign-up .container .sign-up-form .form-content .row-wrapper .pass1 {
+            flex-basis: 400px;
+        }
+    </style>
 </head>
 
 <body>
