--- a/static/css/movie-info.css
+++ b/static/css/movie-info.css
@@ -174,6 +174,7 @@
     display: inline-block;
 }
 
+.movie-card-review-button,
 .movie-card-right-button-back {
     padding: 0 0 0 20px;
     margin: 30px auto 0;
@@ -183,6 +184,7 @@
 
 @media (max-width: 992px) {
     .movie-card-right-button,
+    .movie-card-review-button,
     .movie-card-right-button-back,
     .movie-card-right-button-disable {
         padding: 0;
@@ -193,12 +195,14 @@
 }
 
 @media (max-width: 992px) {
+    .movie-card-review-button,
     .movie-card-right-button-back {
         padding: 10px 0 0 20px;
     }
 }
 
 .movie-card-right-button a,
+.movie-card-review-button span,
 .movie-card-right-button-back a,
 .movie-card-right-button-disable a {
     text-decoration: none;
@@ -225,6 +229,14 @@
     color: var(--select-color);
 }
 
+.movie-card-review-button span {
+    border: 2px solid var(--review-color);
+}
+
+.movie-card-review-button {
+    color: var(--review-color);
+}
+
 .movie-card-right-button-disable a {
     cursor: default;
     color: #9c9c9c;
@@ -242,8 +254,8 @@
     transition-duration: 0.5s;
 }
 
+.movie-card-review-button span:hover,
 .movie-card-right-button-back a:hover {
-    background-color: var(--select-color);
     background-size: 12px 12px;
     background-repeat: no-repeat;
     background-position: 10% 50%;
@@ -252,6 +264,15 @@
     transition-duration: 0.5s;
 }
 
+.movie-card-right-button-back a:hover {
+    background-color: var(--select-color);
+}
+
+.movie-card-review-button span:hover {
+    background-color: var(--review-color);
+}
+
+.movie-card-review-button:hover,
 .movie-card-right-button-back:hover {
     color: #ffffff;
 }
