--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@
                 <a class="menu-link" href="">Genres</a>
                 <a class="menu-link" href="">Specials</a>
             {% if user.is_authenticated %}
+                <a class="menu-link" href="{% url 'watchlist' %}">Watchlist</a>
                 <a class="menu-link" href="{% url 'logout' %}">Log Out</a>
             {% else %}
                 <a class="menu-link" href="{% url 'login' %}">Log In</a>
