Fix styles for mobile devices

--- a/templates/advanced_search.html
+++ b/templates/advanced_search.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <div class="app-content-header" style="text-align: center; margin: auto;">
-    <h1 class="app-content-header-text">Movie List &#160;<i class="fa fa-film" aria-hidden="true"></i></h1>
+    <h1 class="app-content-header-text">Movie List &#160;<i class="fa fa-film" aria-hidden="true" style="color: #FFBC0B"></i></h1>
 </div>
 
 {% if movieItems %}
