--- a/static/css/movie-info.css
+++ b/static/css/movie-info.css
@@ -185,19 +185,21 @@
 @media (max-width: 992px) {
     .movie-card-right-button,
     .movie-card-review-button,
-    .movie-card-right-button-back,
     .movie-card-right-button-disable {
         padding: 0;
         text-align: center;
-        margin: 20px auto 20px;
+        margin: 20px 20px 20px 20px;
         display: inherit;
     }
 }
 
 @media (max-width: 992px) {
-    .movie-card-review-button,
-    .movie-card-right-button-back {
+    .movie-card-review-button {
         padding: 10px 0 0 20px;
+    }
+
+    .movie-card-right-button-back {
+        display: none;
     }
 }
 
